--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /Assignment/Second partial/Hw2 Classes/UseOfClasses/build/
+/Workshop/Second partial/Workshop03/Management System/nbproject/private/
