--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Assignment/Second partial/Hw2 Classes/UseOfClasses/build/
 /Workshop/Second partial/Workshop03/Management System/nbproject/private/
+/Assignment/Second partial/Hw06Interpretation of the uml diagram v1.1/Management System/build/
