--- a/Assignment/Second partial/Hw08Interface/AgeSystem/nbproject/project.properties
+++ b/Assignment/Second partial/Hw08Interface/AgeSystem/nbproject/project.properties
@@ -24,12 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Date.jar
+dist.jar=${dist.dir}/AgeSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Date.jar=C:\\Users\\ASUS\\Documents\\NetBeansProjects\\Date\\dist\\Date.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Date.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -40,9 +42,7 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ec.edu.espe.SystemDate.view.Main
+main.class=ec.edu.espe.AgeSystem.view.SystemAge
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
