--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Workshop/Second partial/Workshop05/polymorphism/nbproject/private/
 /Workshop/Second partial/Workshop05 Polymorphism/polymorphism/nbproject/private/
 /Workshop/Second partial/Workshop05 Polymorphism/polymorphism/build/
+/Assignment/Second partial/Nueva Carpeta/MenuPro/nbproject/private/
+/Assignment/Second partial/Nueva Carpeta/MenuPro/build/
